Main Site redone in flexbox!

--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
 
@@ -14,10 +15,82 @@
   <![endif]-->
 </head>
 
-  <body>
+<body>
 
-    <!-- Copy and paste your HTML from the first UI project here -->
-      
-    
-  </body>
+  <!-- Copy and paste your HTML from the first UI project here -->
+
+
+  <nav>
+    <a href="./services.html" class="First">Services</a>
+    <a href="#">Product</a>
+    <a href="#">Vision</a>
+    <a href="#">Features</a>
+    <a href="#">About</a>
+    <a href="#">Contact</a>
+    <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+  </nav>
+
+  <header>
+    <div class="Tagline">
+      <h1>Innovation</h1>
+      <h1>On</h1>
+      <h1>Demand</h1>
+      <button type="button" class="StartButton">Get Started</button>
+    </div>
+    <img src="img/header-img.png" alt="Image of a code snippet." id="CircleImg">
+  </header>
+  <hr>
+  <section>
+    <div class="Inline">
+      <h3>Features</h3>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
+    <div class="Inline">
+      <h3>About</h3>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
+  </section>
+
+
+  <img id="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+
+  <section>
+    <div class="Inline Thirds">
+      <h3>Services</h3>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
+
+    <div class="Inline Thirds">
+      <h3>Product</h3>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
+
+    <div class="Inline Thirds">
+      <h3>Vision</h3>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
+  </section>
+  <hr>
+  <address>
+    <h3 class="SpaceMe">Contact</h3>
+    <p>123 Way 456 Street</p>
+    <p>Somewhere, USA</p>
+    <p class="SpaceMe">1 (888) 888-8888</p>
+    <p>sales@greatidea.io</p>
+  </address>
+
+  <footer>
+    <p>Copyright Great Idea! 2018</p>
+  </footer>
+</body>
+
+</html>
+
+</body>
+
 </html>
