Boxes section done, though its still frustrating me...

--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -29,40 +29,40 @@
 
 <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
 <div>
-  <h3>Services</h3>
+  <h2>Services</h2>
   <p>Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
 </div>
-<hr>
+<hr class="TopLine">
 <section class="Table">
-  <div class="TableBox">
+  <div class="TableBox TableTop">
     <h3>Digital Design</h3>
     <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
     <button class="LearnMore">Learn More</button>
   </div>
-  <div class="TableBox">
+  <div class="TableBox TableTop">
     <h3>UX / UI</h3>
     <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-    <button class="TableBox">Learn More</button>
+    <button class="LearnMore">Learn More</button>
   </div>
-  <div class="Table">
+  <div class="TableBox">
     <h3>Digital Marketing</h3>
     <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-    <button class="TableBox">Learn More</button>
+    <button class="LearnMore">Learn More</button>
   </div>
-  <div class="Table">
+  <div class="TableBox">
     <h3>Web Development</h3>
     <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-    <button class="TableBox">Learn More</button>
+    <button class="LearnMore">Learn More</button>
   </div>
-  <div class="Table">
+  <div class="TableBox">
     <h3>iOS Development</h3>
     <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-    <button class="TableBox">Learn More</button>
+    <button class="LearnMore">Learn More</button>
   </div>
-  <div class="Table">
+  <div class="TableBox">
     <h3>Android Development</h3>
     <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-    <button class="TableBox">Learn More</button>
+    <button class="LearnMore">Learn More</button>
   </div>
 </section>
 <hr>
